ganz neu direkt am master

--- a/assets/default/css/more.css
+++ b/assets/default/css/more.css
@@ -1,7 +1,1 @@
-header{background:red;}
- schreib ich nochwas dazu
- 
- mal sehen was rebasing kann
-
-
-das ist jetzt die version vom ihor branch
+ganz neu änderung
